--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 
      #h {
          color: red;
-         font-size: x-large;
+         font-size: xx-large;
          margin-bottom: 7%;
          font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
@@ -48,6 +48,15 @@
          color: #ca2323;
          font-family: sans-serif;
      }
+
+     #footer {
+        color: #fff;
+        padding: 10px;
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+    }
 
      .footer-heart a {
          border-bottom: 1px solid #453886;
@@ -70,3 +79,57 @@
      .emoji {
          vertical-align: middle;
      }
+
+     body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
+
+    header {
+        background-color: #3498db;
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+    }
+
+    #container {
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        padding: 20px;
+        margin: 20px;
+        text-align: center;
+    }
+
+    button {
+        background-color: #1565c0;
+        color: #fff;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #0d47a1;
+    }
+
+    input[type="number"] {
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        margin: 8px 0;
+    }
+
+    #image-container {
+        display: flex;
+        justify-content: center;
+    }
+
+    #image-container img {
+        max-width: 40%;
+        max-height: 100%;
+        border-radius: 10px;
+    }
