--- a/style.css
+++ b/style.css
@@ -1,135 +1,121 @@
-     #calc {
-         background-color: aqua;
-         padding: 0.5% 2% 0.5% 2%;
-         font-size: 100%;
-     }
+#calc {
+  background-color: aqua;
+  padding: 0.5% 2% 0.5% 2%;
+  font-size: 100%;
+}
 
-     label {
+label {
+  color: aliceblue;
+  margin-top: 5%;
+  font-weight: bold;
+}
 
-         color: aliceblue;
-         margin-top: 5%;
-         font-weight: bold;
-     }
+input {
+  background-color: rgb(221, 239, 137);
+  margin: 1% 0 2% 0;
+  font-weight: bold;
+  text-align: center;
+  font-size: 100%;
+}
 
-     input {
-         background-color: rgb(221, 239, 137);
-         margin: 1% 0 2% 0;
-         font-weight: bold;
-         text-align: center;
-         font-size: 100%;
-     }
+* {
+  background-color: rgb(5, 13, 76);
+}
 
-     * {
-         background-color: rgb(5, 13, 76);
-     }
+#res {
+  font-size: 200%;
+  width: 150px;
+  background-color: rgb(217, 237, 198);
+  color: red;
+}
 
-     #res {
-         font-size: 200%;
-         width: 150px;
-         background-color: rgb(217, 237, 198);
-         color: red;
-     }
+#h {
+  color: red;
+  font-size: xx-large;
+  margin-bottom: 7%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
 
-     #h {
-         color: red;
-         font-size: xx-large;
-         margin-bottom: 7%;
-         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+.footer-heart {
+  text-align: center;
+  font-family: open sans, sans-serif;
+  color: white;
+}
 
-     }
+#column {
+  color: #ca2323;
+  font-family: sans-serif;
+}
 
-     .footer-heart {
-         text-align: center;
-         font-family: open sans, sans-serif;
-         color: white;
-     }
+#footer {
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 
-     #column {
-         color: #ca2323;
-         font-family: sans-serif;
-     }
+.footer-heart a {
+  border-bottom: 1px solid #453886;
+  color: #453886;
+  padding-bottom: 0.25em;
+  text-decoration: none;
+}
 
-     #footer {
-        color: #fff;
-        padding: 10px;
-        text-align: center;
-        position: absolute;
-        bottom: 0;
-        width: 100%;
-    }
+.footer-heart a:hover {
+  color: #2196f3;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
+  background-position: bottom;
+  background-repeat: repeat-x;
+  background-size: 20%;
+  border-bottom: 0;
+  padding-bottom: 0.3em;
+  text-decoration: none;
+}
 
-     .footer-heart a {
-         border-bottom: 1px solid #453886;
-         color: #453886;
-         padding-bottom: .25em;
-         text-decoration: none;
-     }
+.emoji {
+  vertical-align: middle;
+}
 
-     .footer-heart a:hover {
-         color: #2196f3;
-         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg id='squiggle-link' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' xmlns:ev='http://www.w3.org/2001/xml-events' viewBox='0 0 20 4'%3E%3Cstyle type='text/css'%3E.squiggle{animation:shift .3s linear infinite;}@keyframes shift {from {transform:translateX(0);}to {transform:translateX(-20px);}}%3C/style%3E%3Cpath fill='none' stroke='%23453886' stroke-width='2' class='squiggle' d='M0,3.5 c 5,0,5,-3,10,-3 s 5,3,10,3 c 5,0,5,-3,10,-3 s 5,3,10,3'/%3E%3C/svg%3E");
-         background-position: bottom;
-         background-repeat: repeat-x;
-         background-size: 20%;
-         border-bottom: 0;
-         padding-bottom: .3em;
-         text-decoration: none;
-     }
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+}
 
-     .emoji {
-         vertical-align: middle;
-     }
+header {
+  background-color: #3498db;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
 
-     body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        overflow-x: hidden; /* Prevent horizontal scrolling */
-    }
+button {
+  background-color: #1565c0;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
 
-    header {
-        background-color: #3498db;
-        color: #fff;
-        padding: 20px;
-        text-align: center;
-    }
+button:hover {
+  background-color: #0d47a1;
+}
 
-    #container {
-        background-color: #fff;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        padding: 20px;
-        margin: 20px;
-        text-align: center;
-    }
+input[type="number"] {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin: 8px 0;
+}
 
-    button {
-        background-color: #1565c0;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-
-    button:hover {
-        background-color: #0d47a1;
-    }
-
-    input[type="number"] {
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        margin: 8px 0;
-    }
-
-    #image-container {
-        display: flex;
-        justify-content: center;
-    }
-
-    #image-container img {
-        max-width: 40%;
-        max-height: 100%;
-        border-radius: 10px;
-    }
+#image-container img {
+  max-width: 40%;
+  max-height: 100%;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+}
